objects/Campaign.object
<CustomObject><fields>
        <fullName>ACF_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Organization, Educational Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Actual_Count_Override__c</fullName>
        <label>Actual Count Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Actual_Margin__c</fullName>
        <formula>ExpectedRevenue -  AmountWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between expected and actual revenue</inlineHelpText>
        <label>Actual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Alternate_Title__c</fullName>
        <inlineHelpText>Alternate name for the program</inlineHelpText>
        <label>Alternate Title</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Alumni_or_Current_Student__c</fullName>
        <label>Alumni or Current Student</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Amount_Due__c</fullName>
        <description>NOT CURRENTLY USED</description>
        <formula>ACF_Sales_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of Sales Opportunity</inlineHelpText>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Billable_Days__c</fullName>
        <label>Billable Days</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Blackboard_Launch_Date__c</fullName>
        <label>Blackboard Launch Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Break_Even_Point__c</fullName>
        <label>Break Even Point</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Budgeted_Compensation__c</fullName>
        <label>Budgeted Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Budgeted_Non_Comp__c</fullName>
        <label>Budgeted Non-Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Budgeted_Revenue__c</fullName>
        <label>Budgeted Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Corp_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.hed__Primary_Organization__c</field>
                <operation>equals</operation>
                <valueField>$Source.ACF_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Contact)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Cost_Food__c</fullName>
        <label>Cost: Food</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Cost_Per_Lead__c</fullName>
        <formula>IF (
  AND ( NOT(ISBLANK(ACF_Cost_Food__c)), NOT(ISBLANK(ACF_Cost_Travel__c)),   
        NOT(ISBLANK(ACF_Num_of_Leads__c)) ),  
  ((ACF_Cost_Food__c + ACF_Cost_Travel__c )/ ACF_Num_of_Leads__c),
  Null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost of Food + Travel / # of Leads</inlineHelpText>
        <label>Cost Per Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Cost_Travel__c</fullName>
        <label>Cost: Travel</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Cvent_Event_ID__c</fullName>
        <label>Cvent Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Days_Until_Start_Date__c</fullName>
        <formula>StartDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Eval_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation Template</label>
        <referenceTo>Evaluation_Template__c</referenceTo>
        <relationshipLabel>Campaigns (Offering Evaluation Template)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Event_Date_Time__c</fullName>
        <label>Event Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Faculty_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Offerings as Faculty Director)</relationshipLabel>
        <relationshipName>Program_Offerings_as_FacultyDirector</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Faculty_Member__c</fullName>
        <label>Faculty Member</label>
        <picklist>
            <picklistValues>
                <fullName>Les Charm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allan Cohen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Corbett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann Donnellson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dwight Gertz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phil Kim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Taylor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Cohan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan Duffy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Mulcahy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Potter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keith Rollag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elizabeth Thornton</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Offerings</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_In_ERx__c</fullName>
        <label>In ERx</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Babson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Campus: 1st Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Campus: Congress Room (9th Floor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Campus: South Station Room (9th Floor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Campus: 1208 (12th Floor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Campus: 1210 (12th Floor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Campus: Co-Working Space (12th Floor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco Campus: West Parish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco Campus: Yerba Buena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>William &amp; Mary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migrated Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_Date__c</fullName>
        <label>Migrated Modified Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Module__c</fullName>
        <label>Module</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Num_of_Attendees__c</fullName>
        <label># of Attendees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Num_of_Leads__c</fullName>
        <label># of Leads</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Num_of_RSVPS__c</fullName>
        <label># of RSVPS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Number_Attended__c</fullName>
        <label>Number Attended</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>ACF_Number_Registered__c</fullName>
        <label>Number Registered</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Registered, Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>ACF_Offering_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Sponsor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an account that is a business organization (has business organization as the record type).</errorMessage>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000007uz4</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>sponsored Program Offerings</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Offsite_Facility_Address__c</fullName>
        <label>Offsite Facility Address</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Offsite_Facility_City__c</fullName>
        <label>Offsite Facility City</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Offsite_Facility_Country__c</fullName>
        <defaultValue>"United States"</defaultValue>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Offsite_Facility_State__c</fullName>
        <label>Offsite Facility State</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Offsite_Facility_Zip__c</fullName>
        <label>Offsite Facility Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Offsite_Facility__c</fullName>
        <label>Offsite Facility</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Other_Location__c</fullName>
        <label>Other Location</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Per_Registration_Cost__c</fullName>
        <inlineHelpText>Cost of each registration (displayed on Invoice)</inlineHelpText>
        <label>Per Registration Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <description>Used for data migration from Pivotal</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for data migration from Pivotal</inlineHelpText>
        <label>Pivotal ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Program_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Offerings as Program Coordinator</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Offering)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Program_Type__c</fullName>
        <formula>TEXT(ACF_Program__r.ACF_Program_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000007uz2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Room_Assignment__c</fullName>
        <label>Room Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Allegheny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrimac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mystic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mystic A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mystic B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potomac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Lawrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Lawrence A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Lawrence B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susquehanna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yukon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns (Offering)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Session_EvaluationTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session EvaluationTemplate</label>
        <referenceTo>Evaluation_Template__c</referenceTo>
        <relationshipLabel>Campaigns (Session Evaluation Template)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Taste of Babson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Info Session #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Info Session #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabling Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch and Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Innovation</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Developing Disciplined Growth Strategies</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Influencing without Authority</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Influence</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Psychology and Personal Investing</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Rethinking Effective Leadership in a VUCA Environment</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Shaping Effective Teams</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>The Objective Leader: How to Leverage the Power of Seeing Things As They Are</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Total_Count__c</fullName>
        <label>Total Count</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>ACF_Total_Open__c</fullName>
        <inlineHelpText>Used for sync to Constant Contact</inlineHelpText>
        <label>Total Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Total_Sends__c</fullName>
        <inlineHelpText>Used for sync to Constant Contact</inlineHelpText>
        <label>Total Sends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Weeks_Until_Start_Date__c</fullName>
        <formula>(StartDate - TODAY())/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks Until Start Date</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>FullAccess</sharingModel><listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>BEE_Program_Offering</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>ACF_Program__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.BEE_Program_Offering</value>
        </filters>
        <label>*BEE Program Offering</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Campaign_Templates</fullName>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>template</value>
        </filters>
        <label>**CampaignTemplates</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>EventCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Event,Campaign.Strategic_Partnership_Event</value>
        </filters>
        <label>*Event Campaigns</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews><listViews>
        <fullName>StandardCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Default</value>
        </filters>
        <label>*Standard Campaigns</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>ACF_Demo2_Campaign</fullName>
        <active>false</active>
        <description>Based on Master record type</description>
        <label>ACF Demo2 Campaign</label>
    </recordTypes><recordTypes>
        <fullName>BEE_Program_Offering</fullName>
        <active>true</active>
        <description>Used to manage Exec Ed Open Enrollment and Custom program offerings</description>
        <label>BEE Program Offering</label>
    </recordTypes><recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Used for email, outreach, list management</description>
        <label>Standard</label>
    </recordTypes><recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Used to manage events with participants/participation</description>
        <label>Event</label>
    </recordTypes><recordTypes>
        <fullName>Strategic_Partnership_Event</fullName>
        <active>true</active>
        <description>Strategic Partnership event management</description>
        <label>Strategic Partnership Event</label>
    </recordTypes><validationRules>
        <fullName>Reminder_to_change_name</fullName>
        <active>false</active>
        <errorConditionFormula>Name = "(template)"</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Template cannot be updated; Remember to [Clone] the template and update the Campaign Name.</errorMessage>
    </validationRules><validationRules>
        <fullName>Require_Offsite_Facility</fullName>
        <active>true</active>
        <description>When Location = "Offsite" then require a value in Offsite Facility field</description>
        <errorConditionFormula>AND( ISPICKVAL( ACF_Location__c , "Offsite") , ISBLANK( ACF_Offsite_Facility_Country__c ))</errorConditionFormula>
        <errorDisplayField>ACF_Offsite_Facility_Country__c</errorDisplayField>
        <errorMessage>Value required when Location = "Offsite"</errorMessage>
    </validationRules></CustomObject>